Delete inventory-related files and add products route and add Customer login route
