# routes/products.js
@@ -1,0 +1,40 @@
+const express = require('express');
+const router = express.Router();
+const products = require('../modules/products');
+
+
+/* GET products list */
+router.get('/products/:shopid', function(req, res, next) {
+    // #swagger.tags = ['Products']
+    products.getProducts(req, res);
+});
+
+/* GET Products by ID */
+router.get('/products/:shopid/:id', function(req, res, next) {
+    // #swagger.tags = ['Products']
+    products.getProductById(req, res);
+});
+
+/* POST create a new product */
+router.post('/products/:shopid', function(req, res, next) {
+    // #swagger.tags = ['Products']
+    products.createProduct(req, res);
+});
+
+/* PUT update a product */
+router.put('/products/:shopid/:id', function(req, res, next) {
+    // #swagger.tags = ['Products']
+    products.updateProduct(req, res);
+});
+
+/* DELETE a product */
+router.delete('/products/:shopid/:id', function(req, res, next) {
+    // #swagger.tags = ['Products']
+    products.deleteProduct(req, res);
+});
+
+
+
+
+
+module.exports = router;
